; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/extr_nv04_fence.c_nv04_fence_destroy.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/extr_nv04_fence.c_nv04_fence_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nouveau_drm = type { %struct.nv04_fence_priv* }
%struct.nv04_fence_priv = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nouveau_drm*)* @nv04_fence_destroy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nv04_fence_destroy(%struct.nouveau_drm* %0) #0 {
  %2 = alloca %struct.nouveau_drm*, align 8
  %3 = alloca %struct.nv04_fence_priv*, align 8
  store %struct.nouveau_drm* %0, %struct.nouveau_drm** %2, align 8
  %4 = load %struct.nouveau_drm*, %struct.nouveau_drm** %2, align 8
  %5 = getelementptr inbounds %struct.nouveau_drm, %struct.nouveau_drm* %4, i32 0, i32 0
  %6 = load %struct.nv04_fence_priv*, %struct.nv04_fence_priv** %5, align 8
  store %struct.nv04_fence_priv* %6, %struct.nv04_fence_priv** %3, align 8
  %7 = load %struct.nouveau_drm*, %struct.nouveau_drm** %2, align 8
  %8 = getelementptr inbounds %struct.nouveau_drm, %struct.nouveau_drm* %7, i32 0, i32 0
  store %struct.nv04_fence_priv* null, %struct.nv04_fence_priv** %8, align 8
  %9 = load %struct.nv04_fence_priv*, %struct.nv04_fence_priv** %3, align 8
  %10 = call i32 @kfree(%struct.nv04_fence_priv* %9)
  ret void
}

declare dso_local i32 @kfree(%struct.nv04_fence_priv*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
